--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,38 @@
 }
 
 body {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
+}
+
+#banner::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; /* Mantém o fundo atrás do conteúdo */
+  min-height: 68vh;
+  width: 100%;
+  background: linear-gradient(
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #3c444a,
+    #d9d9d9
+  );
+}
+
+@media screen and (min-width: 1280px) {
+  #banner::after {
+    height: 95vh;
+  }
+
+  #banner {
+    height: 85vh;
+  }
 }
