--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,9 @@ body {
     height: 95vh;
   }
 }
+
+@media screen and (min-width: 1000px) {
+  #bannerTell {
+    background-image: url("../src/assets/banner-bg.png");
+  }
+}
